# envite-fb-rs

./: .gitignore  Cargo.toml  index.html  vercel.json
src/: get_participants.rs  main.rs  participants_list.rs  text_generator.rs
styles/: output.css
