[package]
name = "envite-fb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
reqwasm = "0.5.0"
serde = "1.0.210"
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yew-hooks = "0.3.2"
yew-router = "0.18.0"
